[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chonkie[code]>=1.1.2",
    "dspy>=2.6.27",
    "faiss-cpu>=1.11.0.post1",
    "fastapi[standard]>=0.116.1",
    "loguru>=0.7.3",
    "mlflow>=3.1.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.4",
    "sqlmodel>=0.0.24",
]

